# Qentem-Engine

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  package.json
.github/workflows/: codeql.yml
Documentation/: ALE.md  Template.md
Examples/ALE/: ALE01.cpp  ALE02.cpp  ALE03.cpp  ALE04.cpp
Examples/BigInt/: BigInt01.cpp
Examples/JSON/: JSON01.cpp  JSON02.cpp
Examples/Template/: Template01.cpp  Template02.cpp  Template03.cpp  Template04.cpp  Template05.cpp  Template06.cpp  Template07.cpp  Template08.cpp  Template09.cpp  Template10.cpp  Template11.cpp  Template12.cpp  Template13.cpp  Template14.cpp  Template15.cpp  Template16.cpp  Template17.cpp  Template18.cpp
Include/: ALE.hpp  ALEOperations.hpp  Array.hpp  BigInt.hpp  CPUHelper.hpp  Common.hpp  Deque.hpp  Digit.hpp  DigitUtils.hpp  Engine.hpp  Finder.hpp  FixedArray.hpp  HArray.hpp  HList.hpp  HashTable.hpp  HashTableAdapters.hpp  Internal.hpp  JSON.hpp  JSONUtils.hpp  LiteArray.hpp  LiteStream.hpp  Memory.hpp  MemoryBlock.hpp  MemoryRecord.hpp  MemoryUtils.hpp  PatternFinder.hpp  Platform.hpp  QAllocator.hpp  QCommon.hpp  QConsole.hpp  QExpresion.hpp  QExpression.hpp  QNumber.hpp  QPointer.hpp  QTest.hpp  QTraits.hpp  QUtility.hpp  Reserver.hpp  String.hpp  StringStream.hpp  (+11 more)
Include/Qentem/: Array.hpp  BigInt.hpp  CPUHelper.hpp  Deque.hpp  Digit.hpp  DigitUtils.hpp  HArray.hpp  HList.hpp  HashTable.hpp  HashTableAdapters.hpp  JSON.hpp  JSONUtils.hpp  LinuxConstants.hpp  LiteArray.hpp  LiteStream.hpp  MemoryBlock.hpp  MemoryRecord.hpp  MemoryUtils.hpp  PatternFinder.hpp  Platform.hpp  QCommon.hpp  QConsole.hpp  QExpression.hpp  QNumber.hpp  QPool.hpp  QTest.hpp  QTraits.hpp  QUtility.hpp  Reserver.hpp  String.hpp  StringStream.hpp  StringUtils.hpp  StringView.hpp  SystemCall.hpp  SystemMemory.hpp  Tags.hpp  Template.hpp  ToCharsHelper.hpp  Unicode.hpp  Value.hpp  (+2 more)
Tests/: ALETest.cpp  ALETest.hpp  ArrayTest.cpp  ArrayTest.hpp  BigIntTest.cpp  BigIntTest.hpp  DequeTest.cpp  DequeTest.hpp  DigitTest.cpp  DigitTest.hpp  EngineTest.cpp  EngineTest.hpp  EvaluateTest.cpp  EvaluateTest.hpp  FixedArrayTest.cpp  FixedArrayTest.hpp  HArrayTest.cpp  HArrayTest.hpp  HListTest.cpp  HListTest.hpp  JSONTest.cpp  JSONTest.hpp  JSONUtilsTest.cpp  JSONUtilsTest.hpp  MemoryBlockTest.cpp  MemoryBlockTest.hpp  MemoryTest.cpp  MemoryTest.hpp  QPoolTest.cpp  QPoolTest.hpp  ReserverTest.cpp  ReserverTest.hpp  StringStreamTest.cpp  StringStreamTest.hpp  StringTest.cpp  StringTest.hpp  StringUtilsTest.cpp  StringUtilsTest.hpp  TemplateLTest.cpp  TemplateLTest.hpp  (+12 more)
